Writing mode seems buggy, use calc width instead

--- a/print.css
+++ b/print.css
@@ -1,8 +1,8 @@
 @page {
   size: 99mm 210mm;
   border: 1pt solid black;
-  margin: 2em;
-  padding: 0.2em;
+  margin: 1.375em 2em;
+  padding: 0.5em;
   counter-increment: page;
   font-family: "Songti TC", serif;
   font-size: 8pt;
@@ -11,14 +11,17 @@
 @page :left {
   @left-top {
     writing-mode: vertical-rl;
+    text-align: center;
     content: string(statute-title) '\ff08' string(statute-now, first) '\301c' string(statute-now, last) '\689d\fe36';
-    padding: 0.325em 0.2em;
+    margin: 0 .325em 0 .625em;
+    background: #ccc;
   }
   @left-bottom {
     writing-mode: vertical-rl;
     text-align: right;
     content: counter(page, cjk-decimal);
-    padding: 0.325em 0.2em;
+    margin: 0 .325em 0 .625em;
+    background: #aaa;
   }
 }
 
@@ -26,13 +29,15 @@
   @right-top {
     writing-mode: vertical-lr;
     content: string(statute-title) '\ff08' string(statute-now, first) '\301c' string(statute-now, last) '\689d\fe36';
-    padding: 0.325em 0.2em;
+    margin: 0 .625em 0 .325em;
+    background: #ccc;
   }
   @right-bottom {
     writing-mode: vertical-lr;
     text-align: right;
     content: counter(page, cjk-decimal);
-    padding: 0.325em 0.2em;
+    margin: 0 .625em 0 .325em;
+    background: #aaa;
   }
 }
 
