Rename classes according to regulation

--- a/common.css
+++ b/common.css
@@ -14,7 +14,7 @@ body {
   padding: 0.675em;
 }
 
-h1 {
+header {
   font-family: "Hiragino Mincho ProN", sans-serif;
   font-weight: bold;
   font-size: 12pt;
@@ -40,94 +40,94 @@ ol {
   padding: 0;
 }
 
-ol.history {
+.history {
   font-size: .875em;
   margin: 0 0 1em 3em;
 }
 
-.statute > ol {
+.subsections {
   margin: 0;
   counter-reset: counter;
   list-style: none;
 }
 
-.statute > ol > li {
+.subsections > li {
   counter-increment: counter;
 }
 
-.statute > ol > li:before {
+.subsections > li:before {
   content: counter(counter, cjk-decimal) '\3000';
 }
 
-ol > ol > ol {
+.items {
   margin: 0 0 0 3em;
 }
 
-body > ol > li, ol > ol > ol > li {
+.paragraphs > li, .items > li {
   text-indent: -1em;
 }
 
-body>ol>li:nth-of-type(1):before { content:'①'; }
-body>ol>li:nth-of-type(2):before { content:'②'; }
-body>ol>li:nth-of-type(3):before { content:'③'; }
-body>ol>li:nth-of-type(4):before { content:'④'; }
-body>ol>li:nth-of-type(5):before { content:'⑤'; }
-body>ol>li:nth-of-type(6):before { content:'⑥'; }
-body>ol>li:nth-of-type(7):before { content:'⑦'; }
-body>ol>li:nth-of-type(8):before { content:'⑧'; }
-body>ol>li:nth-of-type(9):before { content:'⑨'; }
-body>ol>li:nth-of-type(10):before { content:'⑩'; }
-body>ol>li:nth-of-type(11):before { content:'⑪'; }
-body>ol>li:nth-of-type(12):before { content:'⑫'; }
-body>ol>li:nth-of-type(13):before { content:'⑬'; }
-body>ol>li:nth-of-type(14):before { content:'⑭'; }
-body>ol>li:nth-of-type(15):before { content:'⑮'; }
-body>ol>li:nth-of-type(16):before { content:'⑯'; }
-body>ol>li:nth-of-type(17):before { content:'⑰'; }
-body>ol>li:nth-of-type(18):before { content:'⑱'; }
-body>ol>li:nth-of-type(19):before { content:'⑲'; }
-body>ol>li:nth-of-type(20):before { content:'⑳'; }
-body>ol>li:nth-of-type(21):before { content:'㉑'; }
-body>ol>li:nth-of-type(22):before { content:'㉒'; }
-body>ol>li:nth-of-type(23):before { content:'㉓'; }
-body>ol>li:nth-of-type(24):before { content:'㉔'; }
-body>ol>li:nth-of-type(25):before { content:'㉕'; }
-body>ol>li:nth-of-type(26):before { content:'㉖'; }
-body>ol>li:nth-of-type(27):before { content:'㉗'; }
-body>ol>li:nth-of-type(28):before { content:'㉘'; }
-body>ol>li:nth-of-type(29):before { content:'㉙'; }
-body>ol>li:nth-of-type(30):before { content:'㉚'; }
-body>ol>li:nth-of-type(31):before { content:'㉛'; }
-body>ol>li:nth-of-type(32):before { content:'㉜'; }
-body>ol>li:nth-of-type(33):before { content:'㉝'; }
-body>ol>li:nth-of-type(34):before { content:'㉞'; }
-body>ol>li:nth-of-type(35):before { content:'㉟'; }
-body>ol>li:nth-of-type(36):before { content:'㊱'; }
-body>ol>li:nth-of-type(37):before { content:'㊲'; }
-body>ol>li:nth-of-type(38):before { content:'㊳'; }
-body>ol>li:nth-of-type(39):before { content:'㊴'; }
-body>ol>li:nth-of-type(40):before { content:'㊵'; }
-body>ol>li:nth-of-type(41):before { content:'㊶'; }
-body>ol>li:nth-of-type(42):before { content:'㊷'; }
-body>ol>li:nth-of-type(43):before { content:'㊸'; }
-body>ol>li:nth-of-type(44):before { content:'㊹'; }
-body>ol>li:nth-of-type(45):before { content:'㊺'; }
-body>ol>li:nth-of-type(46):before { content:'㊻'; }
-body>ol>li:nth-of-type(47):before { content:'㊼'; }
-body>ol>li:nth-of-type(48):before { content:'㊽'; }
-body>ol>li:nth-of-type(49):before { content:'㊾'; }
-body>ol>li:nth-of-type(50):before { content:'㊿'; }
+.paragraphs>li:nth-of-type(1):before { content:'①'; }
+.paragraphs>li:nth-of-type(2):before { content:'②'; }
+.paragraphs>li:nth-of-type(3):before { content:'③'; }
+.paragraphs>li:nth-of-type(4):before { content:'④'; }
+.paragraphs>li:nth-of-type(5):before { content:'⑤'; }
+.paragraphs>li:nth-of-type(6):before { content:'⑥'; }
+.paragraphs>li:nth-of-type(7):before { content:'⑦'; }
+.paragraphs>li:nth-of-type(8):before { content:'⑧'; }
+.paragraphs>li:nth-of-type(9):before { content:'⑨'; }
+.paragraphs>li:nth-of-type(10):before { content:'⑩'; }
+.paragraphs>li:nth-of-type(11):before { content:'⑪'; }
+.paragraphs>li:nth-of-type(12):before { content:'⑫'; }
+.paragraphs>li:nth-of-type(13):before { content:'⑬'; }
+.paragraphs>li:nth-of-type(14):before { content:'⑭'; }
+.paragraphs>li:nth-of-type(15):before { content:'⑮'; }
+.paragraphs>li:nth-of-type(16):before { content:'⑯'; }
+.paragraphs>li:nth-of-type(17):before { content:'⑰'; }
+.paragraphs>li:nth-of-type(18):before { content:'⑱'; }
+.paragraphs>li:nth-of-type(19):before { content:'⑲'; }
+.paragraphs>li:nth-of-type(20):before { content:'⑳'; }
+.paragraphs>li:nth-of-type(21):before { content:'㉑'; }
+.paragraphs>li:nth-of-type(22):before { content:'㉒'; }
+.paragraphs>li:nth-of-type(23):before { content:'㉓'; }
+.paragraphs>li:nth-of-type(24):before { content:'㉔'; }
+.paragraphs>li:nth-of-type(25):before { content:'㉕'; }
+.paragraphs>li:nth-of-type(26):before { content:'㉖'; }
+.paragraphs>li:nth-of-type(27):before { content:'㉗'; }
+.paragraphs>li:nth-of-type(28):before { content:'㉘'; }
+.paragraphs>li:nth-of-type(29):before { content:'㉙'; }
+.paragraphs>li:nth-of-type(30):before { content:'㉚'; }
+.paragraphs>li:nth-of-type(31):before { content:'㉛'; }
+.paragraphs>li:nth-of-type(32):before { content:'㉜'; }
+.paragraphs>li:nth-of-type(33):before { content:'㉝'; }
+.paragraphs>li:nth-of-type(34):before { content:'㉞'; }
+.paragraphs>li:nth-of-type(35):before { content:'㉟'; }
+.paragraphs>li:nth-of-type(36):before { content:'㊱'; }
+.paragraphs>li:nth-of-type(37):before { content:'㊲'; }
+.paragraphs>li:nth-of-type(38):before { content:'㊳'; }
+.paragraphs>li:nth-of-type(39):before { content:'㊴'; }
+.paragraphs>li:nth-of-type(40):before { content:'㊵'; }
+.paragraphs>li:nth-of-type(41):before { content:'㊶'; }
+.paragraphs>li:nth-of-type(42):before { content:'㊷'; }
+.paragraphs>li:nth-of-type(43):before { content:'㊸'; }
+.paragraphs>li:nth-of-type(44):before { content:'㊹'; }
+.paragraphs>li:nth-of-type(45):before { content:'㊺'; }
+.paragraphs>li:nth-of-type(46):before { content:'㊻'; }
+.paragraphs>li:nth-of-type(47):before { content:'㊼'; }
+.paragraphs>li:nth-of-type(48):before { content:'㊽'; }
+.paragraphs>li:nth-of-type(49):before { content:'㊾'; }
+.paragraphs>li:nth-of-type(50):before { content:'㊿'; }
 
-body>ol>li:only-of-type { text-indent: 0; }
-body>ol>li:only-of-type:before { content: ''; }
+.paragraphs>li:only-of-type { text-indent: 0; }
+.paragraphs>li:only-of-type:before { content: ''; }
 
-ol>ol>ol>li:nth-of-type(1):before { content:'㈠'; }
-ol>ol>ol>li:nth-of-type(2):before { content:'㈡'; }
-ol>ol>ol>li:nth-of-type(3):before { content:'㈢'; }
-ol>ol>ol>li:nth-of-type(4):before { content:'㈣'; }
-ol>ol>ol>li:nth-of-type(5):before { content:'㈤'; }
-ol>ol>ol>li:nth-of-type(6):before { content:'㈥'; }
-ol>ol>ol>li:nth-of-type(7):before { content:'㈦'; }
-ol>ol>ol>li:nth-of-type(8):before { content:'㈧'; }
-ol>ol>ol>li:nth-of-type(9):before { content:'㈨'; }
-ol>ol>ol>li:nth-of-type(10):before { content:'㈩'; }
+.items>li:nth-of-type(1):before { content:'㈠'; }
+.items>li:nth-of-type(2):before { content:'㈡'; }
+.items>li:nth-of-type(3):before { content:'㈢'; }
+.items>li:nth-of-type(4):before { content:'㈣'; }
+.items>li:nth-of-type(5):before { content:'㈤'; }
+.items>li:nth-of-type(6):before { content:'㈥'; }
+.items>li:nth-of-type(7):before { content:'㈦'; }
+.items>li:nth-of-type(8):before { content:'㈧'; }
+.items>li:nth-of-type(9):before { content:'㈨'; }
+.items>li:nth-of-type(10):before { content:'㈩'; }
