--- a/common.css
+++ b/common.css
@@ -63,7 +63,7 @@ ol {
   margin: 0 0 0 3em;
 }
 
-.paragraphs > li, .items > li {
+.paragraphs > li, .history > li, .items > li {
   text-indent: -1em;
 }
 
@@ -77,49 +77,60 @@ ol {
 .paragraphs>li:nth-of-type(8):before { content:'⑧'; }
 .paragraphs>li:nth-of-type(9):before { content:'⑨'; }
 .paragraphs>li:nth-of-type(10):before { content:'⑩'; }
-.paragraphs>li:nth-of-type(11):before { content:'⑪'; }
-.paragraphs>li:nth-of-type(12):before { content:'⑫'; }
-.paragraphs>li:nth-of-type(13):before { content:'⑬'; }
-.paragraphs>li:nth-of-type(14):before { content:'⑭'; }
-.paragraphs>li:nth-of-type(15):before { content:'⑮'; }
-.paragraphs>li:nth-of-type(16):before { content:'⑯'; }
-.paragraphs>li:nth-of-type(17):before { content:'⑰'; }
-.paragraphs>li:nth-of-type(18):before { content:'⑱'; }
-.paragraphs>li:nth-of-type(19):before { content:'⑲'; }
-.paragraphs>li:nth-of-type(20):before { content:'⑳'; }
-.paragraphs>li:nth-of-type(21):before { content:'㉑'; }
-.paragraphs>li:nth-of-type(22):before { content:'㉒'; }
-.paragraphs>li:nth-of-type(23):before { content:'㉓'; }
-.paragraphs>li:nth-of-type(24):before { content:'㉔'; }
-.paragraphs>li:nth-of-type(25):before { content:'㉕'; }
-.paragraphs>li:nth-of-type(26):before { content:'㉖'; }
-.paragraphs>li:nth-of-type(27):before { content:'㉗'; }
-.paragraphs>li:nth-of-type(28):before { content:'㉘'; }
-.paragraphs>li:nth-of-type(29):before { content:'㉙'; }
-.paragraphs>li:nth-of-type(30):before { content:'㉚'; }
-.paragraphs>li:nth-of-type(31):before { content:'㉛'; }
-.paragraphs>li:nth-of-type(32):before { content:'㉜'; }
-.paragraphs>li:nth-of-type(33):before { content:'㉝'; }
-.paragraphs>li:nth-of-type(34):before { content:'㉞'; }
-.paragraphs>li:nth-of-type(35):before { content:'㉟'; }
-.paragraphs>li:nth-of-type(36):before { content:'㊱'; }
-.paragraphs>li:nth-of-type(37):before { content:'㊲'; }
-.paragraphs>li:nth-of-type(38):before { content:'㊳'; }
-.paragraphs>li:nth-of-type(39):before { content:'㊴'; }
-.paragraphs>li:nth-of-type(40):before { content:'㊵'; }
-.paragraphs>li:nth-of-type(41):before { content:'㊶'; }
-.paragraphs>li:nth-of-type(42):before { content:'㊷'; }
-.paragraphs>li:nth-of-type(43):before { content:'㊸'; }
-.paragraphs>li:nth-of-type(44):before { content:'㊹'; }
-.paragraphs>li:nth-of-type(45):before { content:'㊺'; }
-.paragraphs>li:nth-of-type(46):before { content:'㊻'; }
-.paragraphs>li:nth-of-type(47):before { content:'㊼'; }
-.paragraphs>li:nth-of-type(48):before { content:'㊽'; }
-.paragraphs>li:nth-of-type(49):before { content:'㊾'; }
-.paragraphs>li:nth-of-type(50):before { content:'㊿'; }
 
 .paragraphs>li:only-of-type { text-indent: 0; }
 .paragraphs>li:only-of-type:before { content: ''; }
+
+.history>li:nth-of-type(1):before { content:'①'; }
+.history>li:nth-of-type(2):before { content:'②'; }
+.history>li:nth-of-type(3):before { content:'③'; }
+.history>li:nth-of-type(4):before { content:'④'; }
+.history>li:nth-of-type(5):before { content:'⑤'; }
+.history>li:nth-of-type(6):before { content:'⑥'; }
+.history>li:nth-of-type(7):before { content:'⑦'; }
+.history>li:nth-of-type(8):before { content:'⑧'; }
+.history>li:nth-of-type(9):before { content:'⑨'; }
+.history>li:nth-of-type(10):before { content:'⑩'; }
+.history>li:nth-of-type(11):before { content:'⑪'; }
+.history>li:nth-of-type(12):before { content:'⑫'; }
+.history>li:nth-of-type(13):before { content:'⑬'; }
+.history>li:nth-of-type(14):before { content:'⑭'; }
+.history>li:nth-of-type(15):before { content:'⑮'; }
+.history>li:nth-of-type(16):before { content:'⑯'; }
+.history>li:nth-of-type(17):before { content:'⑰'; }
+.history>li:nth-of-type(18):before { content:'⑱'; }
+.history>li:nth-of-type(19):before { content:'⑲'; }
+.history>li:nth-of-type(20):before { content:'⑳'; }
+.history>li:nth-of-type(21):before { content:'㉑'; }
+.history>li:nth-of-type(22):before { content:'㉒'; }
+.history>li:nth-of-type(23):before { content:'㉓'; }
+.history>li:nth-of-type(24):before { content:'㉔'; }
+.history>li:nth-of-type(25):before { content:'㉕'; }
+.history>li:nth-of-type(26):before { content:'㉖'; }
+.history>li:nth-of-type(27):before { content:'㉗'; }
+.history>li:nth-of-type(28):before { content:'㉘'; }
+.history>li:nth-of-type(29):before { content:'㉙'; }
+.history>li:nth-of-type(30):before { content:'㉚'; }
+.history>li:nth-of-type(31):before { content:'㉛'; }
+.history>li:nth-of-type(32):before { content:'㉜'; }
+.history>li:nth-of-type(33):before { content:'㉝'; }
+.history>li:nth-of-type(34):before { content:'㉞'; }
+.history>li:nth-of-type(35):before { content:'㉟'; }
+.history>li:nth-of-type(36):before { content:'㊱'; }
+.history>li:nth-of-type(37):before { content:'㊲'; }
+.history>li:nth-of-type(38):before { content:'㊳'; }
+.history>li:nth-of-type(39):before { content:'㊴'; }
+.history>li:nth-of-type(40):before { content:'㊵'; }
+.history>li:nth-of-type(41):before { content:'㊶'; }
+.history>li:nth-of-type(42):before { content:'㊷'; }
+.history>li:nth-of-type(43):before { content:'㊸'; }
+.history>li:nth-of-type(44):before { content:'㊹'; }
+.history>li:nth-of-type(45):before { content:'㊺'; }
+.history>li:nth-of-type(46):before { content:'㊻'; }
+.history>li:nth-of-type(47):before { content:'㊼'; }
+.history>li:nth-of-type(48):before { content:'㊽'; }
+.history>li:nth-of-type(49):before { content:'㊾'; }
+.history>li:nth-of-type(50):before { content:'㊿'; }
 
 .items>li:nth-of-type(1):before { content:'㈠'; }
 .items>li:nth-of-type(2):before { content:'㈡'; }
