Use relative size, improve display

--- a/common.css
+++ b/common.css
@@ -17,7 +17,7 @@ body {
 header {
   font-family: "Hiragino Mincho ProN", sans-serif;
   font-weight: bold;
-  font-size: 12pt;
+  font-size: 1.5rem;
   line-height: 3;
   margin-top: -0.675rem;
 }
