--- a/print.css
+++ b/print.css
@@ -8,31 +8,31 @@
 }
 
 @page :left {
-  margin: 1.375em 2.5em 1.375em 2em;
+  margin: 1.375em 3em 1.375em 2.5em;
   @left-top {
     writing-mode: vertical-rl;
-    content: string(statute-title) '\ff08' string(statute-now, first) '\301c' string(statute-now, last) '\689d\fe36';
-    margin: 0 .325em 0 .625em;
+    content: string(statute-title) '\ff08' string(statute-now, first) '\ff5e' string(statute-now, last) '\689d\fe36';
+    margin: 0 .575em 0 .925em;
   }
   @left-bottom {
     writing-mode: vertical-rl;
     content: counter(page, cjk-decimal);
-    margin: 0 .325em 0 .625em;
+    margin: 0 .575em 0 .925em;
   }
 }
 
 @page :right {
-  margin: 1.375em 2em 1.375em 2.5em;
+  margin: 1.375em 2.5em 1.375em 3em;
   @right-top {
     writing-mode: vertical-lr;
-    content: string(statute-title) '\ff08' string(statute-now, first) '\301c' string(statute-now, last) '\689d\fe36';
-    margin: 0 .625em 0 .325em;
+    content: string(statute-title) '\ff08' string(statute-now, first) '\ff5e' string(statute-now, last) '\689d\fe36';
+    margin: 0 .925em 0 .575em;
   }
   @right-bottom {
     writing-mode: vertical-lr;
     text-align: right;
     content: counter(page, cjk-decimal);
-    margin: 0 .625em 0 .325em;
+    margin: 0 .925em 0 .575em;
   }
 }
 
