--- a/styles/print.css
+++ b/styles/print.css
@@ -17,7 +17,7 @@
   @left-bottom {
     writing-mode: vertical-rl;
     content: counter(page, cjk-decimal);
-    margin: 0 .575em 0 .925em;
+    margin: 0 .575em 0.25em .925em;
   }
 }
 
@@ -32,7 +32,7 @@
     writing-mode: vertical-lr;
     text-align: right;
     content: counter(page, cjk-decimal);
-    margin: 0 .925em 0 .575em;
+    margin: 0 .925em 0.25em .575em;
   }
 }
 
