--- a/styles/print.css
+++ b/styles/print.css
@@ -1,29 +1,14 @@
 @page {
   size: 99mm 210mm;
-  border: 1pt solid black;
   padding: 0.5em;
   counter-increment: page;
   font-family: "Songti TC", serif;
   font-size: 8pt;
+  border: 1pt solid black;
 }
 
 @page :left {
   margin: 1.375em 3em 1.375em 2.5em;
-  @left-top {
-    writing-mode: vertical-rl;
-    content: string(statute-title) '\ff08' string(statute-now, first) string(statute-unit, last) string(statute-now, last) string(statute-suffix, last) '\fe36';
-    margin: 0 .575em 0 .925em;
-  }
-  @left-middle {
-    height: 6rem;
-    padding: 0 .375rem 0 .875rem;
-    font-size: 1.25rem;
-    content: string(category-title);
-    font-family: 'Pingfang TC', sans-serif;
-    font-weight: 600;
-    color: #212121;
-    background: rgba(0, 0, 0, .2);
-  }
   @left-bottom {
     writing-mode: vertical-rl;
     content: counter(page, cjk-decimal);
@@ -31,35 +16,39 @@
   }
 }
 
-@page :left:blank {
+@page :right {
+  margin: 1.375em 2.5em 1.375em 3em;
+  @right-bottom {
+    writing-mode: vertical-lr;
+    content: counter(page, cjk-decimal);
+    margin: 0 .925em 0.25em .575em;
+  }
+}
+
+@page category {
+  margin: 8.5mm; /* = 24pt (<section> 1em) */
+  border: none;
+}
+
+@page statute:left {
+  @left-top {
+    writing-mode: vertical-rl;
+    content: string(statute-title) '\ff08' string(statute-now, first) string(statute-unit, last) string(statute-now, last) string(statute-suffix, last) '\fe36';
+    margin: 0 .575em 0 .925em;
+  }
+}
+
+@page statute:left:blank {
   @left-top {
     content: '\8cc7\6599\88dc\5145\6b04';
   }
 }
 
-@page :right {
-  margin: 1.375em 2.5em 1.375em 3em;
+@page statute:right {
   @right-top {
     writing-mode: vertical-lr;
     content: string(statute-title) '\ff08' string(statute-now, first) string(statute-unit, last) string(statute-now, last) string(statute-suffix, last) '\fe36';
     margin: 0 .925em 0 .575em;
-  }
-  @right-middle {
-    height: 6rem;
-    padding: 0 .875rem 0 .375rem;
-    font-size: 1.25rem;
-    content: string(category-title);
-    font-family: 'Pingfang TC', sans-serif;
-    font-weight: 600;
-    color: #212121;
-    background: rgba(0, 0, 0, .2);
-  }
-  @right-bottom {
-    height: 7rem;
-    writing-mode: vertical-lr;
-    text-align: right;
-    content: counter(page, cjk-decimal);
-    margin: 0 .925em 0.25em .575em;
   }
 }
 
@@ -72,28 +61,25 @@ nav {
 }
 
 section {
+  page: category;
   string-set: category-title attr(data-category-label);
-  text-align: center;
-  vertical-align: middle;
   page-break-before: right;
   page-break-after: always;
+  prince-bookmark-level: 1;
+  margin: 10.5em auto;
+  vertical-align: middle;
 }
 
 article {
+  page: statute;
   page-break-before: always;
   page-break-after: always;
 }
 
-[data-category='supreme'] { page: supreme; }
-[data-category='admin'] { page: admin; }
-[data-category='legis'] { page: legis; }
-[data-category='judicial'] { page: judicial; }
-[data-category='case'] { page: case; }
-[data-category='appendix'] { page: appendix; }
-
 header {
   string-set: statute-title content(), statute-unit '', statute-suffix '';
   margin-top: 0.75rem;
+  prince-bookmark-level: 2;
 }
 
 .history {
