--- a/styles/common.css
+++ b/styles/common.css
@@ -65,11 +65,16 @@ h6 span:not(:last-of-type) {
   margin-right: -.5em;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 p {
     margin: 0 0 0 1em;
 }
 
-ol {
+ol, ul {
   list-style: none;
   margin: 0 0 0 1em;
   padding: 0;
