--- a/styles/common.css
+++ b/styles/common.css
@@ -76,8 +76,12 @@ p {
 
 ol, ul {
   list-style: none;
-  margin: 0 0 0 1em;
+  margin: 0;
   padding: 0;
+}
+
+ol {
+  margin-left: 1em;
 }
 
 .history {
