--- a/styles/print.css
+++ b/styles/print.css
@@ -9,6 +9,10 @@
 
 @page :left {
   margin: 1.375em 3em 1.375em 2.5em;
+  @left-top {
+    writing-mode: vertical-rl;
+    margin: 0 .575em 0 .925em;
+  }
   @left-bottom {
     writing-mode: vertical-rl;
     content: counter(page, cjk-decimal);
@@ -18,6 +22,10 @@
 
 @page :right {
   margin: 1.375em 2.5em 1.375em 3em;
+  @right-top {
+    writing-mode: vertical-lr;
+    margin: 0 .925em 0 .575em;
+  }
   @right-bottom {
     writing-mode: vertical-lr;
     content: counter(page, cjk-decimal);
@@ -25,23 +33,26 @@
   }
 }
 
-@page category {
-  margin: 8.5mm; /* = 24pt (<section> 1em) */
-  border: none;
+@page index:left {
+  @left-top {
+    content: '\76ee\9304';
+  }
+}
+
+@page index:right {
   @right-top {
     content: '\76ee\9304';
   }
 }
 
-@page :nth(1 of category) {
-  counter-reset: page 1;
+@page category {
+  margin: 8.5mm; /* = 24pt (<section> 1em) */
+  border: none;
 }
 
 @page statute:left {
   @left-top {
-    writing-mode: vertical-rl;
     content: string(statute-title) '\ff08' string(statute-now, first) string(statute-unit, last) string(statute-now, last) string(statute-suffix, last) '\fe36';
-    margin: 0 .575em 0 .925em;
   }
 }
 
@@ -53,9 +64,7 @@
 
 @page statute:right {
   @right-top {
-    writing-mode: vertical-lr;
     content: string(statute-title) '\ff08' string(statute-now, first) string(statute-unit, last) string(statute-now, last) string(statute-suffix, last) '\fe36';
-    margin: 0 .925em 0 .575em;
   }
 }
 
