--- a/styles/common.css
+++ b/styles/common.css
@@ -5,7 +5,7 @@
 }
 
 html, body {
-  font-family: "Songti TC", "Hiragino Mincho ProN", "MSungHK", serif;
+  font-family: Palatino, "Songti TC", "Hiragino Mincho ProN", "MSungHK", serif;
   font-size: 8pt;
   line-height: 1.375;
 }
@@ -15,7 +15,7 @@ body {
 }
 
 section {
-  font-family: "Hiragino Mincho ProN", "MSungHK", serif;
+  font-family: Didot, "Hiragino Mincho ProN", "MSungHK", serif;
   font-weight: bold;
   font-size: 3rem;
   margin: 1em;
@@ -28,7 +28,7 @@ section {
 }
 
 header {
-  font-family: "Hiragino Mincho ProN", "MSungHK", serif;
+  font-family: Didot, "Hiragino Mincho ProN", "MSungHK", serif;
   font-weight: bold;
   font-size: 1.5rem;
   line-height: 2rem;
