--- a/styles/print.css
+++ b/styles/print.css
@@ -20,6 +20,12 @@
   }
 }
 
+@page :left:blank {
+  @left-top {
+    content: '\8cc7\6599\88dc\5145\6b04';
+  }
+}
+
 @page :right {
   margin: 1.375em 2.5em 1.375em 3em;
   @right-top {
@@ -72,15 +78,21 @@
   }
 }
 
-@page statute:left:blank {
-  @left-top {
-    content: '\8cc7\6599\88dc\5145\6b04';
-  }
-}
-
 @page statute:right {
   @right-top {
     content: string(statute-title) string(statute-prefix, last) string(statute-now, first) string(statute-unit, last) string(statute-now, last) string(statute-suffix, last);
+  }
+}
+
+@page interpretation:left {
+  @left-top {
+    content: '\5b78\751f\6cd5\9662\89e3\91cb\6587';
+  }
+}
+
+@page interpretation:right {
+  @right-top {
+    content: '\5b78\751f\6cd5\9662\89e3\91cb\6587';
   }
 }
 
@@ -122,6 +134,10 @@ article {
   page-break-after: always;
 }
 
+article.interpretation {
+  page: interpretation;
+}
+
 header {
   string-set: statute-title content(), statute-prefix '', statute-unit '', statute-suffix '';
   margin: .75rem -.1rem 1.25rem -.15rem;
@@ -140,10 +156,10 @@ h2, h3, h4, h5, h6 {
   page-break-after: auto;
 }
 
-h6 {
+.act h6 {
   string-set: statute-now attr(data-number), statute-prefix '\fe35', statute-unit '\fe31', statute-suffix '\689d\fe36';
 }
 
-h6[data-appendix] {
+.act h6[data-appendix] {
   string-set: statute-now attr(data-number), statute-prefix '\fe35', statute-unit '\fe31', statute-suffix '\fe36';
 }
