--- a/styles/print.css
+++ b/styles/print.css
@@ -20,12 +20,6 @@
   }
 }
 
-@page :left:blank {
-  @left-top {
-    content: '\8cc7\6599\88dc\5145\6b04';
-  }
-}
-
 @page :right {
   margin: 1.375em 2.5em 1.375em 3em;
   @right-top {
@@ -61,12 +55,6 @@
 @page category {
   margin: 8.5mm; /* = 24pt (<section> 1em) */
   border: none;
-  @left-bottom {
-    content: '';
-  }
-}
-
-@page category:nth(1) { /* #intro */
   @right-bottom {
     content: '';
   }
@@ -75,6 +63,12 @@
 @page statute:left {
   @left-top {
     content: string(statute-title) string(statute-prefix, last) string(statute-now, first) string(statute-unit, last) string(statute-now, last) string(statute-suffix, last);
+  }
+}
+
+@page statute:left:blank {
+  @left-top {
+    content: '\8cc7\6599\88dc\5145\6b04';
   }
 }
 
@@ -87,6 +81,12 @@
 @page interpretation:left {
   @left-top {
     content: '\5b78\751f\6cd5\9662\89e3\91cb\6587';
+  }
+}
+
+@page interpretation:left:blank {
+  @left-top {
+    content: '\8cc7\6599\88dc\5145\6b04';
   }
 }
 
