--- a/styles/common.css
+++ b/styles/common.css
@@ -174,6 +174,39 @@ p:not(.footnote) + .footnote {
   text-indent: -1em;
 }
 
+#cip {
+  margin: 1em;
+  min-height: 1em;
+}
+
+#book_title {
+  font-family: "Source Han Sans TC", sans-serif;
+  font-size: 1.75rem;
+  font-weight: 600;
+  padding-bottom: .75rem;
+}
+
+#book_title .subtitle {
+  display: block;
+  font-size: .875rem;
+  line-height: 1;
+}
+
+#copyright dt {
+  font-family: "PingFang TC", "Source Han Sans TC", sans-serif;
+  font-weight: 600;
+  text-align: justify;
+  text-justify: inter-character;
+  width: 6em;
+  float: left;
+  clear: right;
+}
+
+#copyright dd {
+  display: block;
+  margin-bottom: .375em;
+}
+
 .paragraphs>li:nth-of-type(1):before { content:'①'; }
 .paragraphs>li:nth-of-type(2):before { content:'②'; }
 .paragraphs>li:nth-of-type(3):before { content:'③'; }
